--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  position: relative;
+  /* position: relative; */
   overflow-x: hidden;
   font-family: "Public Sans", serif;
   background: var(--veryLightGray);
@@ -34,7 +34,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
+  /* position: absolute; */
   padding: 5px 50px;
   z-index: 2;
   width: 100vw;
@@ -47,20 +47,25 @@ header {
 }
 
 .nav li a {
-  position: relative;
+  /* position: relative; */
   color: var(--grayishBlue);
 }
 
 .nav li a::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -35px;
-    width: 0;
-    height: 4px;
-    background-color: var(--grayishBlue);
-    transform: all .5s;
+  content: "";
+  /* position: absolute; */
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -35px;
+  width: 0;
+  height: 4px;
+  background-color: red;
+  transform: all 0.5s;
+}
+
+.nav li a:active {
+  border-bottom: 2px solid var(--brightCyan);
+  padding-bottom: 15px;
 }
 
 .user-btn {
@@ -73,6 +78,39 @@ header {
   color: var(--white);
   font-weight: 700;
 }
+
+.details {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 50px;
+}
+
+.left-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.left-content h1 {
+  font-size: 3rem;
+  color: var(--grayishBlue);
+  font-weight: 700;
+}
+
+.left-content p {
+  color: var(--grayishBlue);
+  font-size: 0.8rem;
+  margin: 20px 0;
+}
+
+.right-content {
+  background: url(images/bg-intro-desktop.svg);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
+}
+
 
 /* @media (min-width: 375px) {
   .dropdown-toggle {
